--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-express-generator",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./index.js",
   "scripts": {
     "test": "mocha --reporter spec --bail --check-leaks test/"
@@ -19,9 +19,7 @@
     "templates/"
   ],
   "dependencies": {
-    "commander": "^2.20.0",
-    "hjson": "^3.1.2",
-    "path": "^0.12.7"
+    "commander": "^2.20.0"
   },
   "bugs": {
     "url": "https://github.com/No-YE/ts-express-generator/issues"
